@@ -13,12 +13,17 @@ import com._yp.gaitMate.repository.TestSessionRepository;
 import com._yp.gaitMate.security.utils.AuthUtil;
 import com.amazonaws.services.iot.client.AWSIotQos;
 import lombok.RequiredArgsConstructor;
+import org.aspectj.weaver.ast.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.time.Instant;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -193,15 +198,17 @@ public class TestSessionServiceImpl implements TestSessionService {
     }
 
     @Override
-    public List<DoctorTestReportDto> getReportsOfLoggedInDoctor() {
+    public Page<DoctorTestReportDto> getReportsOfLoggedInDoctor(Pageable pageable) {
 
         Long doctorID = authUtil.getLoggedInDoctor().getId();
 
-        List<TestSession> sessions = testSessionRepository.findAllWithResultsByDoctorId(doctorID);
+        Page<TestSession> sessions = testSessionRepository.findByPatient_Doctor_IdAndStatus(doctorID, TestSession.Status.COMPLETED, pageable);
 
-        return sessions.stream()
-                .map(testSessionMapper::toDoctorTestReportDto)
-                .collect(Collectors.toList());
+
+        List<DoctorTestReportDto> doctorTestReportDtos = sessions.getContent().stream()
+                .map(testSessionMapper::toDoctorTestReportDto).toList();
+
+        return new PageImpl<>(doctorTestReportDtos , pageable , sessions.getTotalElements());
     }
 
     // =====================================
